        PR gas/11013         * arm-dis.c (thumb32_opc): Adjust disassembly of QADD, QDADD, QSUB         and QDSUB.

* gas/arm/arch7em.d: Update expected disassembly.
        * gas/arm/thumb32.d: Likewise.

        * config/tc-arm.c (do_t_simd2): New function.
        (insns): Use do_t_simd2 for QADD, QDADD, QSUB and QDSUB.